2005-07-12  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/Makefile:
	* nsd/tclmisc.c:
	* nsd/tclobj.c:
	* nsd/tcltime.c: Consolidate Tcl time functions and object type
	into one place.

2005-07-11  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/nsmain.c:
	* nsd/queue.c:
	* nsd/tclcmds.c:
	* nsd/proc.c:
	* nsd/tclinit.c: Add generalised interp tracing mechanism which
	replaces Ns_TclInitInterps, Ns_TclRegisterDeferred
	etc. Restructured code for clarity.

	* nsd/tclset.c:
	* nsd/tclshare.c:
	* nsd/tclthread.c:
	* nsd/adprequest.c: s/NsGetInterp/NsGetInterpData/g

	* nsd/Makefile:
	* nsd/connio.c:
	* nsd/tclatclose.c: Moved at-close traces into tclinit.c.

	* nsd/tclmisc.c: Move Ns_TclPrintfResult into misc.

	* nsdb/db.h:
	* nsdb/nsdb.h:
	* nslog/nslog.c:
	* nsperm/nsperm.c: Remove usage of deprecated functions.

2005-07-11  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/ns_adp_chunked.test:
	* tests/servers/server1/pages/ns_tcl_chunked.tcl:
	* tests/servers/server1/pages/ns_adp_chunked.adp:
	* tests/testserver/pages/ns_adp_chunked.adp: Added tests for chunked
	encoding from adp files

	* include/ns.h:
	* nsd/fastpath.c:
	* nsd/return.c:
	* nsd/connio.c: Refactored chunked support to use Ns_connClose 
	to send the last zero chunk. This makes chunked support universal and
	can be used in adp as well.

2005-07-08  Vlad Seryakov  <seryakov@users.sf.net>

	* include/ns.h:
	* nsd/fastpath.c:
	* nsd/return.c:
	* nsd/connio.c:
	* nsd/conn.c: Added support for chunked encoding using conn flag
	NS_CONN_CHUNKED. Once set, output routines (Ns_ConnReturnOpenFd|File|Channel and
        Ns_ReturnData) will perform chunked encoding automatically instead of
        raw data output. From Tcl ns_conn chunked command is available and
	if called with third parameter 0 or 1 can set/unset conn flag.

2005-07-08  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/nsd.h:
	* nsd/fastpath.c: