@@ -1,5 +1,15 @@
 2005-07-12  Stephen Deasey  <sdeasey@users.sf.net>
 
+	* nsd/nsd.h:
+	* nsd/proc.c:
+	* nsd/server.c:
+	* nsd/adprequest.c:
+	* nsd/tclrequest.c: Fix the confusion around the default adp
+	request handler and ns_register_adp and add the missing proc
+	callback info.  ns_info requestprocs now gets things
+	right. ns_register_adp will also now register the default adp
+	request handler if you don't specify an optional file to map.
+
 	* include/ns.h:
 	* nsd/Makefile:
 	* nsd/tclmisc.c:
